11_GCP_WordPress/orchestration/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress 
spec:
  selector:
    matchLabels:
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        version: one
    spec:
      containers:
      - name: wordpress 
        image: "us-central1-docker.pkg.dev/ensign-421602/ensign-public/wordpress:phydroxide"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
