11_GCP_WordPress/orchestration/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress 
spec:
  type: NodePort
  selector:
    greeting: weather 
    version: one
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 80
