11_GCP_WordPress/orchestration/my-ingress.yaml
#From https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress 
            port:
              number: 8080
